# github-actions-ai-improve-issue

./: .ai_improve_issue.yml  .gitignore  .improve_issue.yml  AGENTS.md  README.md  pyproject.toml
.dev/designs/: issue_auto_improve_テンプレート設定化.md  issue_auto_improve_技術検証.md  issue_auto_improve_設計.md
.dev/implementations/: SUMMARY_Phase1.md  issue_auto_improve_phase1_実装.md  issue_auto_improve_phase2_実装.md  設定ファイル化リファクタリング_実装.md  設定管理リファクタリング_実装.md
.dev/requirements/: improve_issue.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: README.md  improve_issue.py
.github/workflows/: ai_improve_issue.yml  copilot-setup-steps.yml  issue_auto_improve.yml
src/ai_improve_issue/: __init__.py  __main__.py  main.py
src/github_actions_ai_improve_issue/: main.py
